--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -27,3 +27,84 @@
 }
 
 /* ICONOS GITHUB  */
+
+.profile-page-container {
+    background: rgba(255, 255, 255, 0.214); /* Fondo blanco con opacidad */
+    padding: 40px; /* Espaciado interno */
+    border-radius: 10px; /* Bordes redondeados */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para efecto de profundidad */
+    width: 80%; /* Ancho de la caja, ajusta según sea necesario */
+    max-width: 600px; /* Ancho máximo de la caja */
+    text-align: center; /* Centrar el texto */
+}
+
+
+
+
+/* ADMINISTRADOR DE USUARIOS */
+
+/* Estilo para el contenedor principal */
+.user-management-container {
+    max-width: 600px; /* Ancho máximo del contenedor */
+    margin: 20px auto; /* Centra horizontalmente */
+    padding: 20px; /* Espaciado interno */
+    background: rgba(255, 255, 255, 0.368);
+    border-radius: 8px; /* Bordes redondeados */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra */
+}
+
+/* Estilo para el encabezado */
+.user-management-container h2 {
+    text-align: center; /* Centra el texto */
+    margin-bottom: 20px; /* Margen inferior */
+}
+
+/* Estilo para el botón de registro */
+.reg-button {
+    display: block; /* Hace que el botón ocupe toda la línea */
+    width: 200px; /* Ancho del botón */
+    margin: 0 auto 20px; /* Centra el botón y agrega margen inferior */
+    padding: 10px; /* Espaciado interno del botón */
+    font-size: 16px; /* Tamaño de fuente */
+    text-align: center; /* Centra el texto */
+    background-color: #28a745; /* Fondo verde */
+    color: #fff; /* Texto blanco */
+    border: none; /* Sin borde */
+    border-radius: 4px; /* Bordes redondeados */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+}
+
+/* Estilo para el botón de eliminar */
+.delete-button {
+    margin-right: 10px; /* Margen derecho para separación */
+    background-color: #dc3545; /* Fondo rojo */
+    color: #fff; /* Texto blanco */
+    border: none; /* Sin borde */
+    border-radius: 4px; /* Bordes redondeados */
+    padding: 5px 10px; /* Espaciado interno */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+}
+
+/* Estilo para los enlaces dentro de los botones */
+button a {
+    color: inherit; /* Hereda el color del botón */
+    text-decoration: none; /* Sin subrayado */
+}
+
+/* Estilo para la tabla */
+table {
+    width: 100%; /* Ancho completo */
+    border-collapse: collapse; /* Colapsar bordes */
+}
+
+/* Estilo para las celdas de la tabla */
+th, td {
+    padding: 10px; /* Espaciado interno */
+    text-align: left; /* Alineación del texto */
+    border-bottom: 1px solid #dee2e6; /* Línea inferior */
+}
+
+/* Estilo para las filas de la tabla */
+tr:nth-child(even) {
+    background-color: #f2f2f2; /* Fondo alterno en las filas pares */
+}
