--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -48,7 +48,7 @@
     max-width: 600px; /* Ancho máximo del contenedor */
     margin: 20px auto; /* Centra horizontalmente */
     padding: 20px; /* Espaciado interno */
-    background: rgba(255, 255, 255, 0.368);
+    background: rgba(255, 255, 255, 0.544);
     border-radius: 8px; /* Bordes redondeados */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra */
 }
@@ -67,7 +67,7 @@
     padding: 10px; /* Espaciado interno del botón */
     font-size: 16px; /* Tamaño de fuente */
     text-align: center; /* Centra el texto */
-    background-color: #28a745; /* Fondo verde */
+    background-color: #2c28a7; /* Fondo verde */
     color: #fff; /* Texto blanco */
     border: none; /* Sin borde */
     border-radius: 4px; /* Bordes redondeados */
@@ -106,5 +106,5 @@ th, td {
 
 /* Estilo para las filas de la tabla */
 tr:nth-child(even) {
-    background-color: #f2f2f2; /* Fondo alterno en las filas pares */
+    background-color: #f2f2f217; /* Fondo alterno en las filas pares */
 }
